--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -21,19 +21,19 @@
 			<div class="collapse navbar-collapse" id="navbars-host">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item <%= page_name === 'index' && 'active' %>">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="index">Home</a>
 					</li>
 					<li class="nav-item <%= page_name === 'about' && 'active' %>">
-						<a class="nav-link" href="about.html">About Us</a>
+						<a class="nav-link" href="about">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="courses.html">Courses</a>
+						<a class="nav-link" href="courses">Courses</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="dashboard.html">Dashboard</a>
+						<a class="nav-link" href="dashboard">Dashboard</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
+						<a class="nav-link" href="contact">Contact</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
