--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -20,20 +20,28 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbars-host">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item <%= page_name === 'index' && 'active' %>">
-						<a class="nav-link" href="index">Home</a>
+					<li
+						class="nav-item <%= page_name === 'index' && 'active' %>"
+					>
+						<a class="nav-link" href="/">Home</a>
 					</li>
-					<li class="nav-item <%= page_name === 'about' && 'active' %>">
-						<a class="nav-link" href="about">About Us</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="courses">Courses</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="dashboard">Dashboard</a>
+					<li
+						class="nav-item <%= page_name === 'about' && 'active' %>"
+					>
+						<a class="nav-link" href="/about">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact">Contact</a>
+						<a
+							class="nav-link <%= page_name === 'courses' && 'active' %>"
+							href="/courses"
+							>Courses</a
+						>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/dashboard">Dashboard</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/contact">Contact</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
