--- a/views/course.ejs
+++ b/views/course.ejs
@@ -17,7 +17,7 @@
 				<div class="blog-item">
 					<div class="image-blog">
 						<img
-							src="images/blog_single.jpg"
+							src="/images/blog_single.jpg"
 							alt=""
 							class="img-fluid"
 						/>
